# src/routes/roles.route.ts
@@ -2,7 +2,7 @@ import { Routes } from '@interfaces/routes.interface';
 import { Router } from 'express';
 import { RoleController } from '@controllers/roles.controller';
 import { isAdmin, ValidationMiddleware, AuthMiddleware } from '@/middlewares';
-import { RoleRequestDto } from '@/dtos/roles.dto';
+import { RoleRequestDto, RoleToUserDto } from '@/dtos/roles.dto';
 
 export class RoleRoute implements Routes {
     public path = '/roles';
@@ -16,6 +16,8 @@ export class RoleRoute implements Routes {
     private initializeRoutes() {
         this.router.get(`${this.path}`, AuthMiddleware, isAdmin, this.role.getAllRoles);
         this.router.post(`${this.path}`, AuthMiddleware, isAdmin, ValidationMiddleware(RoleRequestDto), this.role.createRole);
+        this.router.post(`${this.path}/role-to-user`, AuthMiddleware, ValidationMiddleware(RoleToUserDto), isAdmin, this.role.addRoleToUser);
+        this.router.delete(`${this.path}/role-to-user`, AuthMiddleware, isAdmin, this.role.removeRoleFromUser);
         this.router.get(`${this.path}/:id`, AuthMiddleware, isAdmin, this.role.getRoleById);
         this.router.put(`${this.path}/:id`, AuthMiddleware, isAdmin, ValidationMiddleware(RoleRequestDto), this.role.updateRole);
         this.router.delete(`${this.path}/:id`, AuthMiddleware, isAdmin, this.role.deleteRole);
